--- a/app/src/main/res/layout/fragment_forgot_pw_sent.xml
+++ b/app/src/main/res/layout/fragment_forgot_pw_sent.xml
@@ -29,6 +29,7 @@
         android:scrollbars="none">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true">
@@ -45,7 +46,7 @@
                 android:textAlignment="gravity"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text_size_24sp"
-                app:layout_constraintBottom_toTopOf="@+id/lav_sent"
+                app:layout_constraintBottom_toTopOf="@id/lav_sent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -78,10 +79,10 @@
                 android:textColor="@{isTimerTicking ? @color/grayDark : @color/black, default=@color/grayDark}"
                 android:textSize="@dimen/text_size_16sp"
                 app:layout_constrainedWidth="true"
-                app:layout_constraintBottom_toTopOf="@{isTimerTicking ? @id/btn_resend : @id/tv_timer, default=@id/btn_resend}"
+                app:layout_constraintBottom_toTopOf="@id/btn_resend"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lav_sent" />
+                app:layout_constraintTop_toBottomOf="@id/lav_sent" />
 
             <!-- MARGIN_HORIZONTAL: 19 + 5 = 24DP -->
             <!-- MARGIN_TOP: 3 + 5 = 8DP -->
@@ -103,7 +104,7 @@
                 app:layout_constraintBottom_toTopOf="@id/btn_return"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_resend" />
+                app:layout_constraintTop_toBottomOf="@id/tv_resend" />
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                 android:id="@+id/cpi_resend"
@@ -117,7 +118,7 @@
                 app:layout_constraintBottom_toTopOf="@id/btn_return"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_resend"
+                app:layout_constraintTop_toBottomOf="@id/tv_resend"
                 app:layout_constraintVertical_bias="0" />
 
             <!-- MARGIN_BOTTOM: 19 + 5 = 24DP -->
@@ -139,7 +140,7 @@
                 app:layout_constraintBottom_toTopOf="@id/btn_return"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_resend" />
+                app:layout_constraintTop_toBottomOf="@id/tv_resend" />
 
             <!-- MARGIN_HORIZONTAL: 19 + 5 = 24DP -->
             <!-- MARGIN_BOTTOM: 19 + 5 = 24DP -->
