Revamped Forgot Password Sent Page UI Code

--- a/app/src/main/res/layout-land/fragment_forgot_pw_sent.xml
+++ b/app/src/main/res/layout-land/fragment_forgot_pw_sent.xml
@@ -74,9 +74,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_24dp"
                 android:fontFamily="@font/localized_semi_bold"
-                android:text="@{isTimerTicking ? @string/forgot_pw_sent_text_resend : @string/forgot_pw_sent_text_resent, default=@string/forgot_pw_sent_text_resend}"
+                android:text="@{isTimerTicking ? @string/forgot_pw_sent_text_resent : @string/forgot_pw_sent_text_resend, default=@string/forgot_pw_sent_text_resend}"
                 android:textAlignment="center"
-                android:textColor="@{isTimerTicking ? @color/grayDark : @color/black, default=@color/grayDark}"
+                android:textColor="@{isTimerTicking ? @color/black : @color/grayDark, default=@color/grayDark}"
                 android:textSize="@dimen/text_size_16sp"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toTopOf="@id/btn_resend"
@@ -99,7 +99,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text_size_16sp"
-                android:visibility="@{isResendLoading ? View.VISIBLE : View.GONE, default=visible}"
+                android:visibility="@{isResendLoading ? View.GONE : View.VISIBLE, default=visible}"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toTopOf="@id/btn_return"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -114,7 +114,7 @@
                 android:layout_marginHorizontal="@dimen/margin_24dp"
                 android:layout_marginTop="@dimen/margin_3dp"
                 android:layout_marginBottom="@dimen/margin_24dp"
-                android:visibility="@{isResendLoading ? View.GONE : View.VISIBLE, default=gone}"
+                android:visibility="@{isResendLoading ? View.VISIBLE : View.GONE, default=gone}"
                 app:layout_constraintBottom_toTopOf="@id/btn_return"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
