Set App FontFamily in Theme Resources

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,7 @@
         <item name="snackbarButtonStyle">@style/Theme.WarrantyRoster.Snackbar.ActionButton</item>
         <item name="materialAlertDialogTheme">@style/Theme.WarrantyRoster.AlertDialog</item>
         <item name="materialCalendarTheme">@style/Theme.WarrantyRoster.DatePicker</item>
+        <item name="android:fontFamily">@font/localized_font</item>
     </style>
 
     <style name="Theme.WarrantyRoster.Splash" parent="Theme.SplashScreen">
